--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,17 @@
 ---
+- name: start lxd
+  service:
+    name: "{{ lxd_service_name }}"
+    state: started
+    enabled: yes
+
 - name: restart lxd
   service:
-    name: lxd
+    name: "{{ lxd_service_name }}"
     state: restarted
+
+- name: wait for socket
+  wait_for:
+    path: "{{ lxd_socket_path }}"
+    timeout: 60
+...
