--- a/tests/test.yml
+++ b/tests/test.yml
@@ -7,6 +7,7 @@
         files_matching: "{{ item }}"
       with_items:
         - "main.yml"
-        - "{{ ansible_distribution }}{{ ansible_distribution_major_version }}.yml"
+        - "{{ lxd_snap_channel | regex_replace('/.*', '') }}.yml"
   roles:
     - role_to_test
+...
