--- a/tests/vars/2.0.yml
+++ b/tests/vars/2.0.yml
@@ -1,11 +1,13 @@
 ---
 lxd_profiles:
-  - name: "default"
-    description: "Default LXD profile"
+  - name: "privileged"
+    description: "LXD profile for privileged containers"
     config:
       security.privileged: "true"
       environment.http_proxy: ""
       user.network_mode: ""
+  - name: "default"
+    description: "Default LXD profile"
     devices:
       eth0:
         nictype: "bridged"
@@ -22,3 +24,4 @@ lxd_bridge:
   ipv6:
     address: "fd26:9b5f:cdb1:7756::1/64"
     nat: "true"
+...
