Add a new task and variable to expose containers via NAT iptables rules

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,5 +11,9 @@
     - name: Deploy LXD containers
       import_tasks: "containers.yml"
       tags: lxd_deploy
+
+    - name: Setup NAT routing
+      import_tasks: "nat.yml"
+      tags: lxd_nat
   tags: lxd
 ...
