--- a/tasks/nat.yml
+++ b/tasks/nat.yml
@@ -7,7 +7,7 @@
     protocol: tcp
     match: tcp
     destination_port: "{{ item.dest_port }}"
-    jump: REDIRECT
+    jump: DNAT
     to_destination: "{{ item.container_ip }}"
     to_ports: "{{ item.container_port | default(item.dest_port) }}"
     comment: "Redirect traffic on port {{ item.dest_port }} to {{ item.container_ip }} on port {{ item.container_port | default(item.dest_port) }}"
