Revert "Something has changed recently on 2.0 snap channel, trying shit"
This reverts commit 526f2a7f29b30e0e1f17185d646b0a3e1e30de42.

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -6,11 +6,11 @@
 
 - name: Configuration for version 2.20 or above
   include_tasks: configure-latest.yml
-#  when: "lxd_version_result.stdout is version_compare('2.20', '>=')"
+  when: "lxd_version_result.stdout is version_compare('2.20', '>=')"
 
-#- name: Configuration for version before 2.20
-#  include_tasks: configure-old.yml
-#  when: "lxd_version_result.stdout is version_compare('2.20', '<=')"
+- name: Configuration for version before 2.20
+  include_tasks: configure-old.yml
+  when: "lxd_version_result.stdout is version_compare('2.20', '<=')"
 
 - name: Create LXD profiles
   lxd_profile:
