--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -30,11 +30,11 @@
     if [[ -f /etc/debian_version && ! -f /usr/bin/python ]]
     then
         apt-get -y update
-        apt-get -y install python 
+        apt-get -y install python3
         apt-get -y install systemd ca-certificates gnupg-curl || apt-get -y install systemd ca-certificates gnupg1-curl
     elif [[ -f /etc/redhat-release && ! -f /usr/bin/python ]]
     then
-        yum -y install python
+        yum -y install python3
     else
         echo "OK"
     fi
