More flexible groups assignment
With this patch I can define additional ansible groups per a container:

lxd_containers:
  - name: altlinux
    alias: alt/p9/amd64
    ansible_groups:
      - altlinux
      - distccd
  - name: ubuntu
    alias: ubuntu:21.04
    ansible_groups:
      - ubuntu
      - distccd

--- a/tasks/dynamic_inventory.yml
+++ b/tasks/dynamic_inventory.yml
@@ -5,9 +5,7 @@
     name: "{{ item.name }}"
     ansible_user: root
     ansible_ssh_extra_args: '-o StrictHostKeyChecking=no'
-    groups: 
-      - lxd_containers
-      - distccd
+    groups: "{{ item.ansible_groups|default([]) + ['lxd_containers'] }}"
   delegate_to: localhost
   with_items: "{{ hostvars[thehost].lxd_containers }}"
   loop_control:
